k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ent-exp-app-service
spec:
  type: ClusterIP
  selector:
    app: ent-exp-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
